# hotspots

./: .env  README.md  compose.yaml
.github/workflows/: ci.yml
app/: Dockerfile  README.md  go.mod  go.sum
app/src/: cache.go  config.go  handlers.go  handlers_test.go  main.go  main_test.go  mocks.go  repo.go  repo_test.go  request_params.go  request_params_test.go  rollup.go  rollup_test.go  schemas.go  schemas_test.go  service.go  service_test.go
consume/: .env  Dockerfile  README.md  go.mod  go.sum
consume/src/: aggregates_client.go  aggregates_client_test.go  aggregates_writer.go  aggregates_writer_test.go  bucket.go  bucket_test.go  config.go  consumer.go  consumer_test.go  decode.go  decode_test.go  errors.go  main.go  message_getters.go  message_getters_test.go  message_schemas.go  ocf_writer.go  ocf_writer_test.go  raw_writer.go  raw_writer_test.go  store.go  store_test.go  writer.go  writer_test.go
db/: 01-init.sql
db/aggregates/: 01-init.sql
db/warehouse/: 01-staging.sql  02-base.sql  03-incidents.sql
ingest/: .env  Dockerfile  README.md  compose.yaml  pyproject.toml  run_checks.sh
ingest/src/: checkpointing.py  client.py  config.py  main.py  resource_configs.json  validation.py  worker.py  writer.py
ingest/src/scripts/: produce_from_file.py
ingest/tests/: test_checkpointing.py  test_client.py  test_validation.py  test_worker.py  test_writer.py
reconcile/: Dockerfile  README.md  pyproject.toml
reconcile/src/: client.py  run.py
schemas/raw/: a311_case.avsc  fire_ems_call.avsc  fire_incident.avsc  police_incident.avsc  traffic_crash.avsc
(+1 files in other folders)
