[project]
name = "ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastavro>=1.10.0",
    "httpx>=0.28.1",
    "kafka-python>=2.0.5",
    "pydantic>=2.10.6",
    "redis>=5.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.9",
]
